# zfs

./: .gitignore  .mailmap  AUTHORS  META  README.md
cmd/: Makefile.am  mount_zfs.c  zfs_ids_to_path.c  zgenhostid.c  (+2 more)
cmd/zfs/: Makefile.am  zfs.h  zfs_allow.c  zfs_bookmark.c  zfs_change_key.c  zfs_clone.c  zfs_common.h  zfs_create.c  zfs_destroy.c  zfs_diff.c  zfs_get.c  zfs_hold.c  zfs_holds.c  zfs_inherit.c  zfs_iter.c  zfs_jail.c  zfs_list.c  zfs_load_key.c  zfs_main.c  zfs_mount.c  zfs_program.c  zfs_project.c  zfs_promote.c  zfs_receive.c  zfs_redact.c  zfs_rename.c  zfs_rollback.c  zfs_send.c  zfs_set.c  zfs_snapshot.c  zfs_unmount.c  zfs_upgrade.c  zfs_userspace.c  zfs_wait.c  zfs_zone.c
include/: Makefile.am  cityhash.h  libnvpair.h  libuutil.h  libzfs.h  libzfs_core.h  libzpool.h  libzutil.h  zfeature_common.h  zfs_comutil.h  zfs_deleg.h  zfs_fletcher.h  zfs_prop.h  zfs_valstr.h
include/os/aros/spl/: fcntl.h
include/os/aros/spl/sys/: byteorder.h  ccompile.h  inttypes.h  mman.h  sysmacros.h  vfs.h
include/os/aros/zfs/sys/: zfs_context_os.h
include/os/freebsd/: Makefile.am
include/os/freebsd/spl/: acl.h  acl_impl.h  atomic.h  byteorder.h  callb.h  ccompat.h  ccompile.h  cmn_err.h  condvar.h  cred.h  ctype.h  dirent.h  disp.h  fcntl.h  file.h  freebsd_rwlock.h  idmap.h  isa_defs.h  kmem.h  kmem_cache.h  kstat.h  list.h  list_impl.h  lock.h  misc.h  mount.h  mutex.h  param.h  proc.h  processor.h  procfs_list.h  random.h  rwlock.h  sid.h  sig.h  simd.h  simd_aarch64.h  simd_arm.h  simd_powerpc.h  simd_x86.h  (+22 more)
include/os/freebsd/spl/acl/: acl_common.h
include/os/freebsd/spl/ia32/: asm_linkage.h
include/os/freebsd/spl/sys/: file.h  sunddi.h  taskq.h  uio.h  vm.h
include/os/freebsd/zfs/: abd_impl_os.h  abd_os.h  arc_os.h  freebsd_crypto.h  policy.h  vdev_os.h  zfs_bootenv_os.h  zfs_context_os.h  zfs_ctldir.h  zfs_debug_os.h  zfs_dir.h  zfs_ioctl_compat.h  zfs_vfsops_os.h  zfs_vnops_os.h  zfs_znode_impl.h
include/os/linux/: Makefile.am
include/os/linux/kernel/linux/: mm_compat.h  simd_aarch64.h  simd_arm.h  simd_powerpc.h  simd_x86.h  tracepoint_compat.h  vfs_compat.h  xattr_compat.h
include/os/linux/spl/: acl.h  atomic.h  byteorder.h  callb.h  cmn_err.h  condvar.h  cred.h  errno.h  isa_defs.h  kmem.h  kmem_cache.h  kstat.h  list.h  misc.h  mutex.h  procfs_list.h  rwlock.h  simd.h  stat.h  sunddi.h  sysmacros.h  taskq.h  thread.h  time.h  trace.h  trace_spl.h  trace_taskq.h  tsd.h  types32.h  uio.h  vfs.h  vmem.h  vmsystm.h  vnode.h  wmsum.h  zmod.h  zone.h
include/os/linux/spl/ia32/: asm_linkage.h
include/os/linux/spl/rpc/: types.h  xdr.h
include/os/linux/spl/sys/: file.h  sunddi.h  taskq.h  trace.h  trace_taskq.h  uio.h
include/os/linux/zfs/: abd_impl_os.h  abd_os.h  policy.h  trace_acl.h  trace_arc.h  trace_common.h  trace_dbgmsg.h  trace_dbuf.h  trace_dmu.h  trace_dnode.h  trace_multilist.h  trace_txg.h  trace_vdev.h  trace_zfs.h  trace_zil.h  trace_zio.h  trace_zrlock.h  zfs_bootenv_os.h  zfs_context_os.h  zfs_ctldir.h  zfs_debug_os.h  zfs_dir.h  zfs_vfsops_os.h  zfs_vnops_os.h  zfs_znode_impl.h  zpl.h
include/os/linux/zfs/sys/: abd_os.h  trace_acl.h  trace_arc.h  trace_common.h  trace_dbgmsg.h  trace_dbuf.h  trace_dmu.h  trace_dnode.h  trace_multilist.h  trace_txg.h  trace_vdev.h  trace_zil.h  trace_zio.h  trace_zrlock.h  zfs_ctldir.h  zfs_vfsops_os.h  zfs_znode_impl.h
include/sys/: abd.h  abd_impl.h  dbuf.h  ddt.h  ddt_impl.h  dmu.h  dmu_objset.h  dmu_tx.h  dnode.h  dsl_scan.h  metaslab.h  metaslab_impl.h  mntent.h  range_tree.h  spa.h  spa_impl.h  space_map.h  space_reftree.h  vdev.h  vdev_blkio.h  vdev_impl.h  vdev_rebuild.h  vdev_removal.h  zfs_context.h  zfs_impl_selector.h  zfs_ioctl_impl.h  zfs_sa.h  zfs_vnops.h  zfs_znode.h  zio.h  zio_impl.h
include/sys/fs/: zfs.h
include/zfs/: abd.h  abd_impl.h  aggsum.h  arc.h  arc_impl.h  asm_linkage.h  avl.h  avl_impl.h  bitmap.h  bitops.h  blake3.h  blkptr.h  bplist.h  bpobj.h  bptree.h  bqueue.h  brt.h  brt_impl.h  btree.h  dataset_kstats.h  dbuf.h  ddt.h  ddt_impl.h  dmu.h  dmu_impl.h  dmu_objset.h  dmu_recv.h  dmu_redact.h  dmu_send.h  dmu_traverse.h  dmu_tx.h  dmu_zfetch.h  dnode.h  dsl_bookmark.h  dsl_crypt.h  dsl_dataset.h  dsl_deadlist.h  dsl_deleg.h  dsl_destroy.h  dsl_dir.h  (+101 more)
include/zfs/crypto/: api.h  common.h  icp.h
include/zfs/fm/: protocol.h  util.h
include/zfs/fm/fs/: zfs.h
include/zfs/fs/: zfs.h
include/zfs/lua/: lauxlib.h  lua.h  luaconf.h  lualib.h
include/zfs/sysevent/: dev.h  eventdefs.h
lib/libspl/: Makefile.am  assert.c  backtrace.c  condvar.c  cred.c  kmem.c  kstat.c  libspl.c  list.c  mkdirp.c  mmakefile.src  mutex.c  page.c  procfs_list.c  random.c  rwlock.c  sid.c  strlcat.c  strlcpy.c  taskq.c  thread.c  tunables.c  umem-jemalloc.c
lib/libspl/include/: Makefile.am  assert.h  atomic.h  libgen.h  libspl.h  statcommon.h  umem.h  unistd.h  zone.h
lib/libspl/include/os/aros/rpc/: types.h  xdr.h
lib/libspl/include/os/aros/sys/: mnttab.h  mount.h  stat.h  zfs_context_os.h
lib/libspl/include/os/freebsd/: fcntl.h
lib/libspl/include/os/freebsd/spl/: byteorder.h  fcntl.h  file.h  mnttab.h  mount.h  param.h  stat.h  vfs.h
lib/libspl/include/os/freebsd/spl/ia32/: asm_linkage.h
lib/libspl/include/os/freebsd/sys/: mnttab.h
lib/libspl/include/os/linux/spl/: byteorder.h  errno.h  mnttab.h  mount.h  param.h  stat.h  vfs.h
lib/libspl/include/os/linux/spl/ia32/: asm_linkage.h
lib/libspl/include/os/linux/sys/: mnttab.h
lib/libspl/include/spl/: acl.h  acl_impl.h  asm_linkage.h  backtrace.h  callb.h  cmn_err.h  condvar.h  cred.h  debug.h  dkio.h  dklabel.h  feature_tests.h  file.h  inttypes.h  isa_defs.h  kmem.h  kstat.h  list_impl.h  mhd.h  misc.h  mkdev.h  mod.h  mutex.h  poll.h  processor.h  procfs_list.h  random.h  rwlock.h  sid.h  simd.h  stack.h  stdtypes.h  string.h  sunddi.h  sysmacros.h  systeminfo.h  systm.h  taskq.h  thread.h  time.h  (+10 more)
lib/libspl/include/spl/dktp/: fdisk.h
lib/libspl/include/sys/: uio.h
lib/libspl/os/freebsd/: getexecname.c  getextmntent.c  gethostid.c  mnttab.c  zone.c
lib/libspl/os/linux/: gethostid.c  mnttab.c
(+635 files in other folders)
