# SPDX-License-Identifier: CDDL-1.0
noinst_HEADERS = \
	%D%/linux/compiler.h \
	%D%/linux/types.h \
	\
	%D%/spl/acl/acl_common.h \
	\
	%D%/spl/ia32/asm_linkage.h \
	\
	%D%/spl/acl.h \
	%D%/spl/acl_impl.h \
	%D%/spl/atomic.h \
	%D%/spl/byteorder.h \
	%D%/spl/callb.h \
	%D%/spl/ccompat.h \
	%D%/spl/ccompile.h \
	%D%/spl/cmn_err.h \
	%D%/spl/condvar.h \
	%D%/spl/cred.h \
	%D%/spl/ctype.h \
	%D%/spl/debug.h \
	%D%/spl/dirent.h \
	%D%/spl/disp.h \
	%D%/spl/fcntl.h \
	%D%/spl/file.h \
	%D%/spl/freebsd_rwlock.h \
	%D%/spl/idmap.h \
	%D%/spl/inttypes.h \
	%D%/spl/isa_defs.h \
	%D%/spl/kmem.h \
	%D%/spl/kmem_cache.h \
	%D%/spl/kstat.h \
	%D%/spl/list.h \
	%D%/spl/list_impl.h \
	%D%/spl/lock.h \
	%D%/spl/misc.h \
	%D%/spl/mod.h \
	%D%/spl/mode.h \
	%D%/spl/mount.h \
	%D%/spl/mutex.h \
	%D%/spl/param.h \
	%D%/spl/proc.h \
	%D%/spl/processor.h \
	%D%/spl/procfs_list.h \
	%D%/spl/random.h \
	%D%/spl/rwlock.h \
	%D%/spl/sid.h \
	%D%/spl/sig.h \
	%D%/spl/simd.h \
	%D%/spl/simd_aarch64.h \
	%D%/spl/simd_arm.h \
	%D%/spl/simd_powerpc.h \
	%D%/spl/simd_x86.h \
	%D%/spl/spl_condvar.h \
	%D%/spl/string.h \
	%D%/spl/sunddi.h \
	%D%/spl/sysmacros.h \
	%D%/spl/systeminfo.h \
	%D%/spl/systm.h \
	%D%/spl/taskq.h \
	%D%/spl/thread.h \
	%D%/spl/time.h \
	%D%/spl/timer.h \
	%D%/spl/trace.h \
	%D%/spl/types.h \
	%D%/spl/types32.h \
	%D%/spl/uio.h \
	%D%/spl/uuid.h \
	%D%/spl/vfs.h \
	%D%/spl/vm.h \
	%D%/spl/vmsystm.h \
	%D%/spl/vnode.h \
	%D%/spl/vnode_impl.h \
	%D%/spl/wmsum.h \
	%D%/spl/zmod.h \
	%D%/spl/zone.h \
	\
	%D%/zfs/abd_os.h \
	%D%/zfs/abd_impl_os.h \
	%D%/zfs/arc_os.h \
	%D%/zfs/freebsd_crypto.h \
	%D%/zfs/freebsd_event.h \
	%D%/zfs/policy.h \
	%D%/zfs/trace_zfs.h \
	%D%/zfs/vdev_os.h \
	%D%/zfs/zfs_bootenv_os.h \
	%D%/zfs/zfs_context_os.h \
	%D%/zfs/zfs_ctldir.h \
	%D%/zfs/zfs_debug_os.h \
	%D%/zfs/zfs_dir.h \
	%D%/zfs/zfs_ioctl_compat.h \
	%D%/zfs/zfs_vfsops_os.h \
	%D%/zfs/zfs_vnops_os.h \
	%D%/zfs/zfs_znode_impl.h \
	%D%/zfs/zpl.h

